홍신기 혼자 다해요 수정

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 		<title>E-tube</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="html5\assets\css\main.css" />
+		<link rel="stylesheet" href="../html5up-editorial\assets\css\main.css" />
 
 	</head>
 	<body class="is-preload">
@@ -122,7 +122,7 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">신기가 전부 해줄꺼임</a></li>
+										<li><a href="generic.html">인기영상</a></li>
 										<li><a href="elements.html">애완</a></li>
 										<li>
 											<span class="opener">컴퓨터</span>
@@ -171,28 +171,28 @@
 
 								<tr>
 									<td><a href="#">홍신기</a></td>
-									<td><a href="#">고웹팀플 혼자 다합니다/ 팀원구해요</a></td>
+									<td><a href="#">고웹팀플 팀원구해요</a></td>
 									<td>lv0<td>
 								</tr>
 
 								<tr>
-									<td><a href="#">홍신기</a></td>
-									<td><a href="#">고웹팀플 혼자 다합니다/ 팀원구해요</a></td>
+									<td><a href="#">주형우</a></td>
+									<td><a href="#">고웹팀플팀원구해요</a></td>
+									<td>lv0<td>
+								</tr>
+								<tr>
+									<td><a href="#">장예지</a></td>
+									<td><a href="#">고웹팀플 팀원구해요</a></td>
 									<td>lv0<td>
 								</tr>
 								<tr>
 									<td><a href="#">홍신기</a></td>
-									<td><a href="#">고웹팀플 혼자 다합니다/ 팀원구해요</a></td>
+									<td><a href="#">고웹팀플 1명구해요</a></td>
 									<td>lv0<td>
 								</tr>
 								<tr>
 									<td><a href="#">홍신기</a></td>
-									<td><a href="#">고웹팀플 혼자 다합니다/ 팀원구해요</a></td>
-									<td>lv0<td>
-								</tr>
-								<tr>
-									<td><a href="#">홍신기</a></td>
-									<td><a href="#">고웹팀플 혼자 다합니다/ 팀원구해요</a></td>
+									<td><a href="#">고웹팀플 2명 구해요</a></td>
 									<td>lv0<td>
 								</tr>
 							</tbody>
