메인 페이지 오프너 수정 채널 페이지 채널 선택 페이지 로그인, 콜벡 대충 구성

--- a/public/index.html
+++ b/public/index.html
@@ -22,15 +22,11 @@
 		</section>
 
 		<ul class="icons">
-			<li><a href="#" class=""><span class="label"><h1>LOGIN</h1></span></a></li>
+			<li><a href="login.html" class=""><span class="label"><h1>LOGIN</h1></span></a></li>
 		</ul>
 
 	</header>
 </div>
-
-
-
-
 
 
 
@@ -42,22 +38,6 @@
 						<div class="inner">
 
 
-							<!-- Banner -->
-		<!--
-								<section id="banner">
-									<div class="content">
-										<header>
-											<h1>인기 영상</h1>
-											<p>A free and fully responsive site template</p>
-										</header>
-
-
-									</div>
-
-								</section>
-		-->
-
-							<!-- Section -->
 								<section>
 									<header class="major">
 										<h2>인기 영상</h2>
@@ -121,9 +101,33 @@
 										<h2>카테고리</h2>
 									</header>
 									<ul>
-										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">인기영상</a></li>
-										<li><a href="elements.html">애완</a></li>
+										<li>
+											<span class="opener">스포츠</span>
+											<ul>
+												<li><a href="#">농구</a></li>
+												<li><a href="#">야구</a></li>
+												<li><a href="#">축구</a></li>
+												<li><a href="#">수영</a></li>
+											</ul>
+										</li>
+										<li>
+											<span class="opener">음악</span>
+											<ul>
+												<li><a href="#">피아노</a></li>
+												<li><a href="#">기타</a></li>
+												<li><a href="#">플룻</a></li>
+												<li><a href="#">바이올린</a></li>
+											</ul>
+										</li>
+										<li>
+											<span class="opener">생활</span>
+											<ul>
+												<li><a href="#">청소</a></li>
+												<li><a href="#">저축</a></li>
+												<li><a href="#">요리</a></li>
+												<li><a href="#">교육</a></li>
+											</ul>
+										</li>
 										<li>
 											<span class="opener">컴퓨터</span>
 											<ul>
@@ -133,8 +137,6 @@
 												<li><a href="#">언어(자바/c++)</a></li>
 											</ul>
 										</li>
-										<li><a href="#">스포츠</a></li>
-										<li><a href="#">가정</a></li>
 										<li>
 											<span class="opener">게임</span>
 											<ul>
@@ -205,7 +207,7 @@
 						</table>
 					</div>
 
-					</div>
+
 				</section>
 
 
@@ -214,11 +216,11 @@
 
 
 		<!-- Scripts 아직뭔지 모르겠음-->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="../html5up-editorial/assets/js/jquery.min.js"></script>
+			<script src="../html5up-editorial/assets/js/browser.min.js"></script>
+			<script src="../html5up-editorial/assets/js/breakpoints.min.js"></script>
+			<script src="../html5up-editorial/assets/js/util.js"></script>
+			<script src="../html5up-editorial/assets/js/main.js"></script>
 
 	</body>
 </html>
