channel_select.html 화면 레이아웃 수정

--- a/public/channel_select.html
+++ b/public/channel_select.html
@@ -37,19 +37,19 @@
 						<div class="">
 
 							<!-- Section -->
-              <section style="padding: 6em 0 4em 0 ;">
+              <section style="padding: 3em 0 4em 2em ;  ">
 
                 <div style="height: 160px; width: 200px; float:left;">
-                  <a href="#" class="test"> <img src="C:\Users\hw\Desktop\고웹팀플자료\팀플용 이미지\고양이1.jpg" width="200px" height="160px"
+                  <a href="#" class="test"> <img src="C:\Users\hw\Desktop\고웹팀플자료\팀플용 이미지\고양이1.jpg" width="200px" height="150px"
                   ></img> </a>
                 </div>
-              <div style="vertical-align: top;height: 160px; width: 200px; float:left;">
+              <div style="vertical-align: top;height: 160px; width: 400px; float:left;">
                   <strong><h2>고양이채널</h2><br></strong>
                   구독자수, 동영상 수
 
               </div>
 
-                <div style="vertical-align: middle; ">
+                <div style="height: 160px; width: 100px; float:left;  ">
                   <ul class="actions">
                     <li><a href="#" class="button">구독</a></li>
                   </ul>
@@ -59,44 +59,42 @@
 
 
 
-
 							<!-- Section -->
-							<section style="padding: 6em 0 4em 0 ;">
-
-								<div style="height: 160px; width: 200px; float:left;">
-									<a href="#" class="test"> <img src="C:\Users\hw\Desktop\고웹팀플자료\팀플용 이미지\고양이2.jpg" width="200px" height="160px"
-									></img> </a>
-								</div>
-							<div style="vertical-align: top;height: 160px; width: 200px; float:left;">
-                  <strong><h2>고양이채널</h2><br></strong>
-                  구독자수, 동영상 수
-
-              </div>
-
-								<div style="vertical-align: middle; ">
-									<ul class="actions">
-										<li><a href="#" class="button">구독</a></li>
-									</ul>
-								</div>
-
-							</section>
-
-            <section style="padding: 6em 0 4em 0 ;">
+              <section style="padding: 3em 0 4em 2em ;  ">
 
                 <div style="height: 160px; width: 200px; float:left;">
-                  <a href="#" class="test"> <img src="C:\Users\hw\Desktop\고웹팀플자료\팀플용 이미지\고양이3.jpg" width="200px" height="160px"
+                  <a href="#" class="test"> <img src="C:\Users\hw\Desktop\고웹팀플자료\팀플용 이미지\고양이2.jpg" width="200px" height="150px"
                   ></img> </a>
                 </div>
-              <div style="vertical-align: top;height: 160px; width: 200px; float:left;">
+              <div style="vertical-align: top;height: 160px; width: 400px; float:left;">
                   <strong><h2>고양이채널</h2><br></strong>
                   구독자수, 동영상 수
 
               </div>
 
-                <div style="vertical-align: middle; ">
+                <div style="height: 160px; width: 100px; float:left;  ">
                   <ul class="actions">
-                  <li><a href="#" class="button">구독</a></li>
-                  <!--  <li><input class="button" name="고양이_구독" value="구독"></input></li>  이거 쓸수도 있음-->
+                    <li><a href="#" class="button">구독</a></li>
+                  </ul>
+                </div>
+
+              </section>
+
+              <section style="padding: 3em 0 4em 2em ;  ">
+
+                <div style="height: 160px; width: 200px; float:left;">
+                  <a href="#" class="test"> <img src="C:\Users\hw\Desktop\고웹팀플자료\팀플용 이미지\고양이3.jpg" width="200px" height="150px"
+                  ></img> </a>
+                </div>
+              <div style="vertical-align: top;height: 160px; width: 400px; float:left;">
+                  <strong><h2>고양이채널</h2><br></strong>
+                  구독자수, 동영상 수
+
+              </div>
+
+                <div style="height: 160px; width: 100px; float:left;  ">
+                  <ul class="actions">
+                    <li><a href="#" class="button">구독</a></li>
                   </ul>
                 </div>
 
