--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 		<title>E-tube</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="../html5up-editorial\assets\css\main.css" />
+		<link rel="stylesheet" href="html5/assets/css/main.css" />
 
 	</head>
 	<body class="is-preload">
