--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,17 @@
 
 	</head>
 	<body class="is-preload">
+
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Main -->
+					<div id="main">
+
 	<!-- Header -->
 <div class="inner">
 	<header id="header">
-		<a href="index.html" class="logo"><h1><strong>E-tube</strong></h1> </a>
+		<a href="index.html" class="logo"><h1>E-tube</h1> </a>
 
 		<!-- Search -->
 		<section id="search" class="alt">
@@ -22,7 +29,7 @@
 		</section>
 
 		<ul class="icons">
-			<li><a href="login.html" class=""><span class="label"><h1>LOGIN</h1></span></a></li>
+			<li><a href="login.html" class="fa fa-user-circle fa-lg"><span class="label" style="color:#3D4449"> 로그인</span></a></li>
 		</ul>
 
 	</header>
@@ -39,22 +46,33 @@
 
 
 								<section>
+
 									<header class="major">
 										<h2>인기 영상</h2>
 									</header>
-									<span>
-										<a href="#" class="test"> <video src="C:\Users\hw\Desktop\고웹팀플자료\팀플용 이미지\CAT-1.mp4" width="200px" height="160px"
-										controls loop></video> </a>		<!--poster="#" 하면 대표 이미지 선택-->
-									</span>
-									<span>
-										<a href="#" class="test"> <video src="C:\Users\hw\Desktop\고웹팀플자료\팀플용 이미지\CAT-1.mp4" width="200px" height="160px"
-										controls loop></video> </a>
-									</span>
-									<span>
+									<span style="float:right">
 										<ul class="actions">
 											<li><a href="#" class="button">더보기</a></li>
 										</ul>
 									</span>
+									<span style="padding:0px 40px 40px 0px">
+										<a href="#" class="test"> <video src="C:\Users\hw\Desktop\고웹팀플자료\팀플용 이미지\CAT-1.mp4" width="200px" height="160px"
+										controls loop></video> </a>		<!--poster="#" 하면 대표 이미지 선택-->
+									</span>
+									<span style="padding:0px 40px 40px 0px">
+										<a href="#" class="test"> <video src="C:\Users\hw\Desktop\고웹팀플자료\팀플용 이미지\CAT-1.mp4" width="200px" height="160px"
+										controls loop></video> </a>
+									</span>
+									<span style="padding:0px 40px 40px 0px">
+										<a href="#" class="test"> <video src="C:\Users\hw\Desktop\고웹팀플자료\팀플용 이미지\CAT-1.mp4" width="200px" height="160px"
+										controls loop></video> </a>
+									</span>
+									<span style="padding:0px 40px 40px 0px">
+										<a href="#" class="test"> <video src="C:\Users\hw\Desktop\고웹팀플자료\팀플용 이미지\CAT-1.mp4" width="200px" height="160px"
+										controls loop></video> </a>
+									</span>
+
+
 
 								</section>
 
@@ -64,20 +82,28 @@
 								<header class="major">
 									<h2>게임</h2>
 								</header>
-
-								<span>
-									<a href="#" class="test"> <video src="C:\Users\hw\Desktop\고웹팀플자료\팀플용 이미지\CAT-1.mp4" width="200px" height="160px"
-									controls loop></video> </a>		<!--poster="#" 하면 대표 이미지 선택-->
-								</span>
-								<span>
-									<a href="#" class="test"> <video src="C:\Users\hw\Desktop\고웹팀플자료\팀플용 이미지\CAT-1.mp4" width="200px" height="160px"
-									controls loop></video> </a>
-								</span>
-								<span>
+								<span style="float:right">
 									<ul class="actions">
 										<li><a href="#" class="button">더보기</a></li>
 									</ul>
 								</span>
+								<span style="padding:0px 40px 40px 0px">
+									<a href="#" class="test"> <video src="C:\Users\hw\Desktop\고웹팀플자료\팀플용 이미지\CAT-1.mp4" width="200px" height="160px"
+									controls loop></video> </a>		<!--poster="#" 하면 대표 이미지 선택-->
+								</span>
+								<span style="padding:0px 40px 40px 0px">
+									<a href="#" class="test"> <video src="C:\Users\hw\Desktop\고웹팀플자료\팀플용 이미지\CAT-1.mp4" width="200px" height="160px"
+									controls loop></video> </a>
+								</span>
+								<span style="padding:0px 40px 40px 0px">
+									<a href="#" class="test"> <video src="C:\Users\hw\Desktop\고웹팀플자료\팀플용 이미지\CAT-1.mp4" width="200px" height="160px"
+									controls loop></video> </a>
+								</span>
+								<span style="padding:0px 40px 40px 0px">
+									<a href="#" class="test"> <video src="C:\Users\hw\Desktop\고웹팀플자료\팀플용 이미지\CAT-1.mp4" width="200px" height="160px"
+									controls loop></video> </a>
+								</span>
+
 
 							</section>
 
@@ -88,66 +114,65 @@
 					</div>
 
 
-				<!-- 카테고리 -->
-					<div style="border-right: 5px solid red; width: 200px; margin-right: 10px; padding-right: 5px; float: left;">
-						<div class="inner" style=" width: 180px; margin-right: 2px; padding-left: 5px">
+					<div id="sidebar">
+				  <div class="inner">
 
 
+				    <!-- Menu -->
+				      <nav id="menu">
+				        <header class="major">
+				          <h2>카테고리</h2>
+				        </header>
+				        <ul>
+				          <li>
+				            <span class="opener">스포츠</span>
+				            <ul>
+				              <li><a href="#">농구</a></li>
+				              <li><a href="#">야구</a></li>
+				              <li><a href="#">축구</a></li>
+				              <li><a href="#">수영</a></li>
+				            </ul>
+				          </li>
+				          <li>
+				            <span class="opener">음악</span>
+				            <ul>
+				              <li><a href="#">피아노</a></li>
+				              <li><a href="#">기타</a></li>
+				              <li><a href="#">플룻</a></li>
+				              <li><a href="#">바이올린</a></li>
+				            </ul>
+				          </li>
+				          <li>
+				            <span class="opener">생활</span>
+				            <ul>
+				              <li><a href="#">청소</a></li>
+				              <li><a href="#">저축</a></li>
+				              <li><a href="#">요리</a></li>
+				              <li><a href="#">교육</a></li>
+				            </ul>
+				          </li>
+				          <li>
+				            <span class="opener">컴퓨터</span>
+				            <ul>
+				              <li><a href="#">웹프로그래밍</a></li>
+				              <li><a href="#">데이터베이스</a></li>
+				              <li><a href="#">데이터통신</a></li>
+				              <li><a href="#">언어(자바/c++)</a></li>
+				            </ul>
+				          </li>
+				          <li>
+				            <span class="opener">게임</span>
+				            <ul>
+				              <li><a href="#">롤</a></li>
+				              <li><a href="#">피파</a></li>
+				              <li><a href="#">메이플</a></li>
+				              <li><a href="#">카트라이더</a></li>
+				            </ul>
+				          </li>
+									<li><a href="index.html">스터디게시판</a></li>
 
-
-							<!-- Menu -->
-								<nav id="menu">
-									<header class="major">
-										<h2>카테고리</h2>
-									</header>
-									<ul>
-										<li>
-											<span class="opener">스포츠</span>
-											<ul>
-												<li><a href="#">농구</a></li>
-												<li><a href="#">야구</a></li>
-												<li><a href="#">축구</a></li>
-												<li><a href="#">수영</a></li>
-											</ul>
-										</li>
-										<li>
-											<span class="opener">음악</span>
-											<ul>
-												<li><a href="#">피아노</a></li>
-												<li><a href="#">기타</a></li>
-												<li><a href="#">플룻</a></li>
-												<li><a href="#">바이올린</a></li>
-											</ul>
-										</li>
-										<li>
-											<span class="opener">생활</span>
-											<ul>
-												<li><a href="#">청소</a></li>
-												<li><a href="#">저축</a></li>
-												<li><a href="#">요리</a></li>
-												<li><a href="#">교육</a></li>
-											</ul>
-										</li>
-										<li>
-											<span class="opener">컴퓨터</span>
-											<ul>
-												<li><a href="#">웹프로그래밍</a></li>
-												<li><a href="#">데이터베이스</a></li>
-												<li><a href="#">데이터통신</a></li>
-												<li><a href="#">언어(자바/c++)</a></li>
-											</ul>
-										</li>
-										<li>
-											<span class="opener">게임</span>
-											<ul>
-												<li><a href="#">롤</a></li>
-												<li><a href="#">피파</a></li>
-												<li><a href="#">메이플</a></li>
-												<li><a href="#">카트라이더</a></li>
-											</ul>
-										</li>
-									</ul>
-								</nav>
+				        </ul>
+				      </nav>
 
 
 						</div>
@@ -155,63 +180,7 @@
 
 			</div>
 
-			<div style="float: right; width: 250px; height:auto; border: 5px solid red;">
-				<section>
-					<a href="#"><header> <h2>스터디 게시판</h2></header></a>
-					<h4>최신글</h4>
-					<div class="table-wrapper">
-						<table class="최신글">
-							<thead>
-								<tr>
-									<th>작성자</th>
-									<th>내용</th>
-									<th>요구레벨</th>
-								</tr>
-							</thead>
 
-							<tbody>
-
-								<tr>
-									<td><a href="#">홍신기</a></td>
-									<td><a href="#">고웹팀플 팀원구해요</a></td>
-									<td>lv0<td>
-								</tr>
-
-								<tr>
-									<td><a href="#">주형우</a></td>
-									<td><a href="#">고웹팀플팀원구해요</a></td>
-									<td>lv0<td>
-								</tr>
-								<tr>
-									<td><a href="#">장예지</a></td>
-									<td><a href="#">고웹팀플 팀원구해요</a></td>
-									<td>lv0<td>
-								</tr>
-								<tr>
-									<td><a href="#">홍신기</a></td>
-									<td><a href="#">고웹팀플 1명구해요</a></td>
-									<td>lv0<td>
-								</tr>
-								<tr>
-									<td><a href="#">홍신기</a></td>
-									<td><a href="#">고웹팀플 2명 구해요</a></td>
-									<td>lv0<td>
-								</tr>
-							</tbody>
-							<tfoot>
-								<tr>
-									<td colspan="2"></td>
-									<td></td>
-								</tr>
-							</tfoot>
-						</table>
-					</div>
-
-
-				</section>
-
-
-			</div>
 
 
 
