--- a/public/login.html
+++ b/public/login.html
@@ -1,5 +1,5 @@
 <!doctype html>
-html>
+<html>
 <head>
 <script type="text/javascript" src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.0.js" charset="utf-8"></script>
 </head>
