channel_private,select 화면 레이아웃 수정

--- a/public/channel_private.html
+++ b/public/channel_private.html
@@ -45,9 +45,11 @@
                 </div>
               	<div style="height: 120px; width: 400px; left:160px; width:30%; position:absolute;margin:20px;">
 								  <a href="channel_private.html">
-										<h2 style="margin-top:15px; margin-left:15px">고양이채널</h2>
+										<h2 style="margin-top:5px; margin-left:15px">고양이채널</h2>
 									</a>
-										<p style="margin-left:15px">구독자수, 영상수</p>
+										<p style="margin-left:15px">구독자수, 영상수<br>
+										<a href="#">채널주인스펙확인</a></p>
+
 								</div>
 
                 <div style="height: 120px; width: 100px; float:right;margin:20px;">
