--- a/public/channel_select.html
+++ b/public/channel_select.html
@@ -9,10 +9,17 @@
 
 	</head>
 	<body class="is-preload">
+
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Main -->
+					<div id="main">
+
 	<!-- Header -->
 <div class="inner">
 	<header id="header">
-		<a href="index.html" class="logo"><h1><strong>E-tube</strong></h1> </a>
+		<a href="index.html" class="logo"><h1>E-tube</h1> </a>
 
 		<!-- Search -->
 		<section id="search" class="alt">
@@ -22,91 +29,154 @@
 		</section>
 
 		<ul class="icons">
-			<li><a href="#" class=""><span class="label"><h1>LOGIN</h1></span></a></li>
+			<li><a href="login.html" class="fa fa-user-circle fa-lg"><span class="label" style="color:#3D4449">로그인</span></a></li>
 		</ul>
 
 	</header>
+
+		<div id="main">
+			<div class="inner">
+				<section>
+					<div class="" style=" margin-left:8%; height: 250px; position:relative; ">
+
+				<!-- Section -->
+
+						<div class="image-container" style="height: 210px; width: 280px; float:left; overflow:hidden; display:flex; align-items: center; justify-content: center; margin:20px">
+							<a href="#" class="test"> <img src="https://ichef.bbci.co.uk/news/640/cpsprodpb/17805/production/_105016269_roxy1.jpg"></img> </a>
+						</div>
+						<div style="height: 210px; width: 400px; left:280px; width:30%; position:absolute;margin:20px;">
+							<a href="channel_private.html">
+								<h2 style="margin-top:40px; margin-left:15px">고양이채널</h2>
+							</a>
+							<p style="margin-left:15px">구독자수, 영상수<br>
+							<a href="#">채널주인스펙확인</a></p>
+						</div>
+
+						<div style="height: 210px; margin:20px; float:right; width:300px; width:20%">
+							<ul class="actions" style="margin-top:85px;" >
+								<li><a href="#" class="button">구독</a></li>
+							</ul>
+						</div>
+					</div>
+				</section>
+
+				<section>
+					<div class="" style=" margin-left:8%; height: 250px; position:relative; ">
+
+				<!-- Section -->
+
+						<div class="image-container" style="height: 210px; width: 280px; float:left; overflow:hidden; display:flex; align-items: center; justify-content: center; margin:20px">
+							<a href="#" class="test"> <img src="https://ichef.bbci.co.uk/news/640/cpsprodpb/17805/production/_105016269_roxy1.jpg"></img> </a>
+						</div>
+						<div style="height: 210px; width: 400px; left:280px; width:30%; position:absolute;margin:20px;">
+							<a href="channel_private.html">
+								<h2 style="margin-top:40px; margin-left:15px">고양이채널</h2>
+							</a>
+							<p style="margin-left:15px">구독자수, 영상수<br>
+							<a href="#">채널주인스펙확인</a></p>
+						</div>
+
+						<div style="height: 210px; margin:20px; float:right; width:300px; width:20%">
+							<ul class="actions" style="margin-top:85px;" >
+								<li><a href="#" class="button">구독</a></li>
+							</ul>
+						</div>
+					</div>
+				</section>
+
+				<section>
+					<div class="" style=" margin-left:8%; height: 250px; position:relative; ">
+
+				<!-- Section -->
+
+						<div class="image-container" style="height: 210px; width: 280px; float:left; overflow:hidden; display:flex; align-items: center; justify-content: center; margin:20px">
+							<a href="#" class="test"> <img src="https://ichef.bbci.co.uk/news/640/cpsprodpb/17805/production/_105016269_roxy1.jpg"></img> </a>
+						</div>
+						<div style="height: 210px; width: 400px; left:280px; width:30%; position:absolute;margin:20px;">
+							<a href="channel_private.html">
+								<h2 style="margin-top:40px; margin-left:15px">고양이채널</h2>
+							</a>
+							<p style="margin-left:15px">구독자수, 영상수<br>
+							<a href="#">채널주인스펙확인</a></p>
+						</div>
+
+						<div style="height: 210px; margin:20px; float:right; width:300px; width:20%">
+							<ul class="actions" style="margin-top:85px;" >
+								<li><a href="#" class="button">구독</a></li>
+							</ul>
+						</div>
+					</div>
+				</section>
+			</div>
+
+		</div>
+	</div>
 </div>
 
 
+		<div id="sidebar">
+		<div class="inner">
 
-		<!-- Wrapper -->
-			<div id="wrapper" style="float: left;" >
-				<!-- Main -->
-					<div id="main">
-						<div class="">
+			<!-- Menu -->
+				<nav id="menu">
+					<header class="major">
+						<h2>카테고리</h2>
+					</header>
+					<ul>
+						<li>
+							<span class="opener">스포츠</span>
+							<ul>
+								<li><a href="#">농구</a></li>
+								<li><a href="#">야구</a></li>
+								<li><a href="#">축구</a></li>
+								<li><a href="#">수영</a></li>
+							</ul>
+						</li>
+						<li>
+							<span class="opener">음악</span>
+							<ul>
+								<li><a href="#">피아노</a></li>
+								<li><a href="#">기타</a></li>
+								<li><a href="#">플룻</a></li>
+								<li><a href="#">바이올린</a></li>
+							</ul>
+						</li>
+						<li>
+							<span class="opener">생활</span>
+							<ul>
+								<li><a href="#">청소</a></li>
+								<li><a href="#">저축</a></li>
+								<li><a href="#">요리</a></li>
+								<li><a href="#">교육</a></li>
+							</ul>
+						</li>
+						<li>
+							<span class="opener">컴퓨터</span>
+							<ul>
+								<li><a href="#">웹프로그래밍</a></li>
+								<li><a href="#">데이터베이스</a></li>
+								<li><a href="#">데이터통신</a></li>
+								<li><a href="#">언어(자바/c++)</a></li>
+							</ul>
+						</li>
+						<li>
+							<span class="opener">게임</span>
+							<ul>
+								<li><a href="#">롤</a></li>
+								<li><a href="#">피파</a></li>
+								<li><a href="#">메이플</a></li>
+								<li><a href="#">카트라이더</a></li>
+							</ul>
+						</li>
+						<li><a href="index.html">스터디게시판</a></li>
 
-							<!-- Section -->
-              <section style="padding: 3em 0 4em 2em ;  ">
-
-                <div style="height: 160px; width: 200px; float:left;">
-                  <a href="#" class="test"> <img src="C:\Users\hw\Desktop\고웹팀플자료\팀플용 이미지\고양이1.jpg" width="200px" height="150px"
-                  ></img> </a>
-                </div>
-              <div style="vertical-align: top;height: 160px; width: 400px; float:left;">
-                  <strong><h2>고양이채널</h2><br></strong>
-                  구독자수, 동영상 수
-
-              </div>
-
-                <div style="height: 160px; width: 100px; float:left;  ">
-                  <ul class="actions">
-                    <li><a href="#" class="button">구독</a></li>
-                  </ul>
-                </div>
-
-              </section>
-
-
-
-							<!-- Section -->
-              <section style="padding: 3em 0 4em 2em ;  ">
-
-                <div style="height: 160px; width: 200px; float:left;">
-                  <a href="#" class="test"> <img src="C:\Users\hw\Desktop\고웹팀플자료\팀플용 이미지\고양이2.jpg" width="200px" height="150px"
-                  ></img> </a>
-                </div>
-              <div style="vertical-align: top;height: 160px; width: 400px; float:left;">
-                  <strong><h2>고양이채널</h2><br></strong>
-                  구독자수, 동영상 수
-
-              </div>
-
-                <div style="height: 160px; width: 100px; float:left;  ">
-                  <ul class="actions">
-                    <li><a href="#" class="button">구독</a></li>
-                  </ul>
-                </div>
-
-              </section>
-
-              <section style="padding: 3em 0 4em 2em ;  ">
-
-                <div style="height: 160px; width: 200px; float:left;">
-                  <a href="#" class="test"> <img src="C:\Users\hw\Desktop\고웹팀플자료\팀플용 이미지\고양이3.jpg" width="200px" height="150px"
-                  ></img> </a>
-                </div>
-              <div style="vertical-align: top;height: 160px; width: 400px; float:left;">
-                  <strong><h2>고양이채널</h2><br></strong>
-                  구독자수, 동영상 수
-
-              </div>
-
-                <div style="height: 160px; width: 100px; float:left;  ">
-                  <ul class="actions">
-                    <li><a href="#" class="button">구독</a></li>
-                  </ul>
-                </div>
-
-              </section>
+					</ul>
+				</nav>
 
 
-
-						</div>
-
-					</div>
-
+			</div>
 		</div>
+	</div>
 
 
 
