검색 기능 만들던거 추가(미완)

--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,8 @@
 
 		<!-- Search -->
 		<section id="search" class="alt">
-			<form method="post" action="#">
-				<input type="text" name="query" id="query" placeholder="Search" />
+			<form method="post" action="channel_select.html">
+				<input type="text" onkeypress="if(event.keyCode == 13){search_channel();}"name="query" id="query" placeholder="Search" />
 			</form>
 		</section>
 
