--- a/public/index.html
+++ b/public/index.html
@@ -176,11 +176,11 @@
 
 
 		<!-- Scripts 아직뭔지 모르겠음-->
-			<script src="../html5up-editorial/assets/js/jquery.min.js"></script>
-			<script src="../html5up-editorial/assets/js/browser.min.js"></script>
-			<script src="../html5up-editorial/assets/js/breakpoints.min.js"></script>
-			<script src="../html5up-editorial/assets/js/util.js"></script>
-			<script src="../html5up-editorial/assets/js/main.js"></script>
+			<script src="html5/assets/js/jquery.min.js"></script>
+			<script src="html5/assets/js/browser.min.js"></script>
+			<script src="html5/assets/js/breakpoints.min.js"></script>
+			<script src="html5/assets/js/util.js"></script>
+			<script src="html5/assets/js/main.js"></script>
 
 	</body>
 </html>
