--- a/public/login.html
+++ b/public/login.html
@@ -70,13 +70,15 @@ function onSignIn(googleUser) {
   firebase.analytics();
 
 	var provider = new firebase.auth.GoogleAuthProvider();
-
-	firebase.auth().signInWithPopup(provider).then(function(result) {
-  // This gives you a Google Access Token. You can use it to access the Google API.
-  var token = result.credential.accessToken;
+  firebase.auth().signInWithRedirect(provider);
+  firebase.auth().getRedirectResult().then(function(result) {
+  if (result.credential) {
+    // This gives you a Google Access Token. You can use it to access the Google API.
+    var token = result.credential.accessToken;
+    // ...
+  }
   // The signed-in user info.
   var user = result.user;
-  // ...
 }).catch(function(error) {
   // Handle Errors here.
   var errorCode = error.code;
@@ -87,6 +89,14 @@ function onSignIn(googleUser) {
   var credential = error.credential;
   // ...
 });
+
+firebase.auth().signOut(provider).then(function() {
+  // Sign-out successful.
+  alert("로그아웃되었습니다")
+}).catch(function(error) {
+  // An error happened.
+});
+
 </script>
 
 </body>
