--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,12 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="html5/assets/css/main.css" />
-
+<script>
+function openWindowPop(url, name){
+    var options = 'top=200, left=500, width=250, height=120, status=no, menubar=no, toolbar=no, resizable=no, fullscreen=no, location=no';
+    window.open(url, name, options);
+}
+</script>
 	</head>
 	<body class="is-preload">
 
@@ -29,7 +34,7 @@
 		</section>
 
 		<ul class="icons">
-			<li><a href="login.html" class="fa fa-user-circle fa-lg"><span class="label" style="color:#3D4449"> 로그인</span></a></li>
+			<li><a href="javascript:openWindowPop('login.html', 'popup');" class="fa fa-user-circle fa-lg"><span class="label" style="color:#3D4449"> 로그인</span></a></li>
 		</ul>
 
 	</header>
