--- a/public/login.html
+++ b/public/login.html
@@ -11,6 +11,8 @@ function onSignIn(googleUser) {
   console.log('Name: ' + profile.getName());
   console.log('Image URL: ' + profile.getImageUrl());
   console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+  var testRef = firebase.database().ref('test/');
+  testRef.child(profile.getId()).set({"id":profile.getId(), "name":profile.getName(), "email":profile.getEmail()});
 }
 </script>
 </head>
@@ -35,8 +37,9 @@ function onSignIn(googleUser) {
 
 </script>
 <!-- // 네이버아이디로로그인 초기화 Script -->
-<div class="g-signin2" data-onsuccess="onSignIn"></div>
+<div id="googlelogin" class="g-signin2" data-onsuccess="onSignIn" data-width="185" data-height="40"></div>
 <!-- The core Firebase JS SDK is always required and must be listed first -->
+<button id="logoutBtn">로그아웃</button>
 <script src="/__/firebase/8.1.1/firebase-app.js"></script>
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
@@ -50,35 +53,24 @@ function onSignIn(googleUser) {
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-analytics.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-auth.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-database.js"></script>
+<script src="googlelogin.js"></script>
 
 <script>
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  var firebaseConfig = {
-    apiKey: "AIzaSyDwMYnkiXywcpwhC8OX0iQGHRwdZLnEm2o",
-    authDomain: "webproject-f85df.firebaseapp.com",
-    databaseURL: "https://webproject-f85df.firebaseio.com",
-    projectId: "webproject-f85df",
-    storageBucket: "webproject-f85df.appspot.com",
-    messagingSenderId: "505722645824",
-    appId: "1:505722645824:web:8edc2cb13f06ccf175dea5",
-    measurementId: "G-HFWKZR7F96"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  firebase.analytics();
-
-	var provider = new firebase.auth.GoogleAuthProvider();
-  firebase.auth().signInWithRedirect(provider);
-  firebase.auth().getRedirectResult().then(function(result) {
-  if (result.credential) {
-    // This gives you a Google Access Token. You can use it to access the Google API.
-    var token = result.credential.accessToken;
-    // ...
-  }
+var logoutBtn =  document.getElementById("logoutBtn");
+var googlelogin = document.getElementById("googlelogin");
+   googlelogin.onclick = function(){
+     var provider = new firebase.auth.GoogleAuthProvider();
+     provider.setCustomParameters({
+  prompt: 'select_account'
+});
+     firebase.auth().signInWithPopup(provider).then(function(result) {
+  // This gives you a Google Access Token. You can use it to access the Google API.
+  var token = result.credential.accessToken;
   // The signed-in user info.
   var user = result.user;
+  // ...
 }).catch(function(error) {
   // Handle Errors here.
   var errorCode = error.code;
@@ -89,13 +81,29 @@ function onSignIn(googleUser) {
   var credential = error.credential;
   // ...
 });
+   }
 
-firebase.auth().signOut(provider).then(function() {
+
+   logoutBtn.onclick = function(){
+     firebase.auth().signOut().then(function() {
+       alert("로그아웃되었습니다");
   // Sign-out successful.
-  alert("로그아웃되었습니다")
 }).catch(function(error) {
   // An error happened.
 });
+   }
+
+
+ firebase.auth().onAuthStateChanged(function(user){
+   if(user){
+     googlelogin.style.display="none";
+     logoutBtn.style.display="block";
+   }else{
+     console.log("로그아웃됨");
+     googlelogin.style.display="block";
+     logoutBtn.style.display="none";
+   }
+ });
 
 </script>
 
