--- a/public/specboard.html
+++ b/public/specboard.html
@@ -63,12 +63,10 @@ body{
 				height:35px;
 }
 
-    #ulTable > li > ul > li:first-child               {width:10%;} /*No 열 크기*/
+    #ulTable > li > ul > li:first-child               {width:20%;} /*No 열 크기*/
     #ulTable > li > ul > li:first-child +li           {width:40%;} /*제목 열 크기*/
-    #ulTable > li > ul > li:first-child +li+li        {width:15%;} /*작성일 열 크기*/
-    #ulTable > li > ul > li:first-child +li+li+li     {width:15%;} /*작성자 열 크기*/
-    #ulTable > li > ul > li:first-child +li+li+li+li{width:10%;} /*조회수 열 크기*/
-		#ulTable > li > ul > li:first-child +li+li+li+li+li{width:10%;} /*조회수 열 크기*/
+    #ulTable > li > ul > li:first-child +li+li        {width:20%;} /*작성일 열 크기*/
+		#ulTable > li > ul > li:first-child +li+li+li			{width:20%;}
 
 
     #divPaging {
@@ -132,8 +130,8 @@ body{
 				<div style="float:right; margin: 5px 5px 5px 5px">
 						<select id='selSearchOption' >
 								<option value='A'>최신순</option>
-								<option value='T'>조회순</option>
-								<option value='C'>레벨순</option>
+								<option value='T'>레벨순</option>
+								<option value='C'>카테고리순</option>
 						</select>
 
 				</div>
@@ -144,7 +142,7 @@ body{
 			<ul>
 					<!-- 게시판 제목 -->
 					<header class="major" style="margin-top:20px; float:left;">
-						<h2>스터디게시판</h2>
+						<h2>스팩게시판</h2>
 					</header>
 
 					<!-- 게시판 목록  -->
@@ -155,9 +153,7 @@ body{
 													<li>카테고리</li>
 													<li>제목</li>
 													<li>작성일</li>
-													<li>작성자</li>
 													<li>레벨</li>
-													<li>조회수</li>
 											</ul>
 									</li>
 									<!-- 게시물이 출력될 영역 -->
@@ -166,9 +162,7 @@ body{
 													<li>생활</li>
 													<li class="left"><a href="#" style="color:#3D4449"><p>제목제목제목제목1</p></a></li>
 													<li>2020.11.30</li>
-													<li>홍신기</li>
-													<li>Lv0</li>
-													<li>0</li>
+													<li>Lv0</liv>
 											</ul>
 									</li>
 
@@ -177,9 +171,7 @@ body{
 													<li>스포츠</li>
 													<li class="left"><a href="#" style="color:#3D4449"><p>제목제목제목제목1</p></a></li>
 													<li>2020.11.30</li>
-													<li>홍신기</li>
-													<li>Lv0</li>
-													<li>0</li>
+													<li>Lv0</liv>
 											</ul>
 									</li>
 
@@ -188,9 +180,7 @@ body{
 													<li>게임</li>
 													<li class="left"><a href="#" style="color:#3D4449"><p>제목제목제목제목1</p></a></li>
 													<li>2020.11.30</li>
-													<li>주형우</li>
-													<li>Lv0</li>
-													<li>0</li>
+													<li>Lv0</liv>
 											</ul>
 									</li>
 
@@ -199,9 +189,7 @@ body{
 													<li>음악</li>
 													<li class="left"><a href="#" style="color:#3D4449"><p>제목제목제목제목1</p></a></li>
 													<li>2020.11.30</li>
-													<li>장예주</li>
-													<li>Lv0</li>
-													<li>0</li>
+													<li>Lv0</liv>
 											</ul>
 									<li>
 							</ul>
